--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js" integrity="sha512-xbQU0+iHqhVt7VIXi6vBJKPh3IQBF5B84sSHdjKiSccyX/1ZI7Vnkt2/8y8uruj63/DVmCxfUNohPNruthTEQA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
    
     <script>
-       const socket = io('https://react-server-socket-io.vercel.app/');
+       const socket = io('https://react-server-socketio-production.up.railway.app/');
     //   const socket = io('http://localhost:8080')
       const form = document.querySelector('#miFormulario');
       const mensajes = document.querySelector('#misMensajes');
